compiler-core/src/parse/snapshots/gleam_core__parse__tests__parse_error_for_type_list_after_invalid_qualified_type_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() -> wibble.() { todo }"
---
----- SOURCE CODE
pub fn main() -> wibble.() { todo }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:25
  │
1 │ pub fn main() -> wibble.() { todo }
  │                         ^ I was expecting a type name here
