compiler-core/src/parse/snapshots/gleam_core__parse__tests__pipeline_in_constant_does_not_panic.snap
---
source: compiler-core/src/parse/tests.rs
expression: pub const wibble = 1 |> wobble
---
----- SOURCE CODE
pub const wibble = 1 |> wobble

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:22
  │
1 │ pub const wibble = 1 |> wobble
  │                      ^^ I was not expecting this

Found `|>`, expected one of: 
- A binary operator

Hint: Pipelines are not allowed in constants
