compiler-core/src/parse/snapshots/gleam_core__parse__tests__prepend_to_const_list_with_multiple_spreads.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nconst wibble = [2, 3]\nconst wobble = [0, 1]\nconst wubble = [..wobble, ..wibble]\n"
---
----- SOURCE CODE

const wibble = [2, 3]
const wobble = [0, 1]
const wubble = [..wobble, ..wibble]


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:27
  │
4 │ const wubble = [..wobble, ..wibble]
  │                 --        ^^ I wasn't expecting a second list here
  │                 │          
  │                 You're using a list here

Lists are immutable and singly-linked, so to join two or more lists
all the elements of the lists would need to be copied into a new list.
This would be slow, so there is no built-in syntax for it.
