compiler-core/src/parse/snapshots/gleam_core__parse__tests__qualified_name_in_pattern_size.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1963
expression: "let assert <<value:size(sizes.byte_size)>> = data"
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 49,
            },
            value: Var {
                location: SrcSpan {
                    start: 45,
                    end: 49,
                },
                name: "data",
            },
            pattern: BitArray {
                location: SrcSpan {
                    start: 11,
                    end: 42,
                },
                segments: [
                    BitArraySegment {
                        location: SrcSpan {
                            start: 13,
                            end: 40,
                        },
                        value: Variable {
                            location: SrcSpan {
                                start: 13,
                                end: 18,
                            },
                            name: "value",
                            type_: (),
                            origin: VariableOrigin {
                                syntax: Variable(
                                    "value",
                                ),
                                declaration: LetPattern,
                            },
                        },
                        options: [
                            Size {
                                location: SrcSpan {
                                    start: 19,
                                    end: 40,
                                },
                                value: BitArraySize(
                                    Variable {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 39,
                                        },
                                        module: Some(
                                            (
                                                "sizes",
                                                SrcSpan {
                                                    start: 24,
                                                    end: 29,
                                                },
                                            ),
                                        ),
                                        name: "byte_size",
                                        constructor: None,
                                        type_: (),
                                    },
                                ),
                                short_form: false,
                            },
                        ],
                        type_: (),
                    },
                ],
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: None,
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: None,
        },
    ),
]
