compiler-core/src/parse/snapshots/gleam_core__parse__tests__qualified_name_in_pattern_size_expression.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1968
expression: "let assert <<value:size(sizes.multiplier * local_size)>> = data"
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 63,
            },
            value: Var {
                location: SrcSpan {
                    start: 59,
                    end: 63,
                },
                name: "data",
            },
            pattern: BitArray {
                location: SrcSpan {
                    start: 11,
                    end: 56,
                },
                segments: [
                    BitArraySegment {
                        location: SrcSpan {
                            start: 13,
                            end: 54,
                        },
                        value: Variable {
                            location: SrcSpan {
                                start: 13,
                                end: 18,
                            },
                            name: "value",
                            type_: (),
                            origin: VariableOrigin {
                                syntax: Variable(
                                    "value",
                                ),
                                declaration: LetPattern,
                            },
                        },
                        options: [
                            Size {
                                location: SrcSpan {
                                    start: 19,
                                    end: 54,
                                },
                                value: BitArraySize(
                                    BinaryOperator {
                                        location: SrcSpan {
                                            start: 24,
                                            end: 53,
                                        },
                                        operator: Multiply,
                                        left: Variable {
                                            location: SrcSpan {
                                                start: 24,
                                                end: 40,
                                            },
                                            module: Some(
                                                (
                                                    "sizes",
                                                    SrcSpan {
                                                        start: 24,
                                                        end: 29,
                                                    },
                                                ),
                                            ),
                                            name: "multiplier",
                                            constructor: None,
                                            type_: (),
                                        },
                                        right: Variable {
                                            location: SrcSpan {
                                                start: 43,
                                                end: 53,
                                            },
                                            module: None,
                                            name: "local_size",
                                            constructor: None,
                                            type_: (),
                                        },
                                    },
                                ),
                                short_form: false,
                            },
                        ],
                        type_: (),
                    },
                ],
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: None,
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: None,
        },
    ),
]
