compiler-core/src/parse/snapshots/gleam_core__parse__tests__record_trailing_dot_dot_const.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type Wibble {\n    Wibble(field1: Int, field2: Int)\n}\n\nconst wibble = Wibble(1, 2)\nconst wobble = Wibble(field1: 0, ..)\n        "
---
----- SOURCE CODE

pub type Wibble {
    Wibble(field1: Int, field2: Int)
}

const wibble = Wibble(1, 2)
const wobble = Wibble(field1: 0, ..)
        

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:7:34
  │
7 │ const wobble = Wibble(field1: 0, ..)
  │                                  ^^ I was not expecting this

Found `..`, expected one of: 
- `)`
